--- a/marychat/websocket/重新敲/client2.html
+++ b/marychat/websocket/重新敲/client2.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
-<head>
+<head xmlns="http://www.w3.org/1999/html">
     <meta charset="UTF-8">
     <title>hello world</title>
     <title>聊天demo</title>
 </head>
 <body>
--hello world
+<div>
+    <button id="connect" type="button" onclick="connect()"> 连接</button>
+    <button id="disconnect" type="button" onclick="disconnect">断开连接</button>
+    </br>
+    <button></button>
+    <input type="text" id="content" title="内容"/>
+    <button id="sned" type="button" onclick="send">发送</button>
+</div>
 <script>
-    ws = new WebSocket("ws://localhost:9999/ws");
-    ws.onopen = function () {
-        console.log("打开连接了");
-        ws.send("HelloWorld");
-    };
+    var ws;
+    function connect() {
+        ws = new WebSocket("ws://localhost:9999/ws");
+        ws.onopen = function () {
+            console.log("打开连接了");
+        };
 
-    ws.onmessage = function (data) {
-        console.log("data.data");
-    };
+        ws.onmessage = function (data) {
+            console.log("接受到", data.data);
+        };
 
-    ws.onclose = function () {
-        console.log("关闭连接");
-    };
+        ws.onclose = function () {
+            console.log("关闭连接");
+        };
 
-    ws.onerror = function () {
-        console.log("websocket运行错误", "ERROR");
-    };
+        ws.onerror = function () {
+            console.log("websocket运行错误", "ERROR");
+        };
 
+    }
+    function disconnect() {
+        var.close();
+    }
 
+    function send() {
+        var content = document.getElementById("content").value;
+        ws.send(content);
+    }
 </script>
 </body>
 </html>
