--- a/marychat/websocket/重新敲/client2.html
+++ b/marychat/websocket/重新敲/client2.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
-<head xmlns="http://www.w3.org/1999/html">
+<head>
     <meta charset="UTF-8">
-    <title>hello world</title>
     <title>聊天demo</title>
 </head>
 <body>
 <div>
+    你的名字:<input type="text" id="name" title="你的名字"/><br>
     <button id="connect" type="button" onclick="connect()"> 连接</button>
     <button id="disconnect" type="button" onclick="disconnect">断开连接</button>
-    </br>
-    <button></button>
+    <br>
     <input type="text" id="content" title="内容"/>
-    <button id="sned" type="button" onclick="send">发送</button>
+    <button id="send" type="button" onclick="send">发送</button>
+    <br>
+    <ul id="messageBorad">
+
+    </ul>
+
 </div>
 <script>
     var ws;
+
     function connect() {
         ws = new WebSocket("ws://localhost:9999/ws");
         ws.onopen = function () {
             console.log("打开连接了");
         };
 
-        ws.onmessage = function (data) {
-            console.log("接受到", data.data);
+        ws.onmessage = function (event) {
+            console.log("接收到", event.data);
+            var messages = document.getElementById("messageBoard");
+            var messages = document.createElement('li');
+            var content = document.createTextNode(event.data);
+
+            messages.appendChild(content);
+            messages.appendChild(messages);
         };
 
+
         ws.onclose = function () {
-            console.log("关闭连接");
+            console.log("关闭连接")
         };
 
         ws.onerror = function () {
@@ -35,12 +47,15 @@
 
     }
     function disconnect() {
-        var.close();
+        ws.close();
     }
 
     function send() {
+        var name = document.getElementById("name").value;
         var content = document.getElementById("content").value;
-        ws.send(content);
+        ws.send(name + ":" + content);
+
+
     }
 </script>
 </body>
