--- a/marychat/websocket/重新敲/client2.html
+++ b/marychat/websocket/重新敲/client2.html
@@ -18,6 +18,16 @@
 
 </div>
 <script>
+   function registered() {
+       $.ajax({
+           type:"POST",
+           url:"http://localhost:9999/register"
+           data:document.getElementById("username").value+""+,
+           dataType:dataTypes,
+           success:success
+       });
+   }
+
     var ws;
 
     function connect() {
