--- a/marychat/websocket/重新敲/client2.html
+++ b/marychat/websocket/重新敲/client2.html
@@ -5,6 +5,12 @@
 </head>
 <body>
 <div>
+    用户名：<input type="text" id="username" title="用户名">
+    密码:<input type="text " id="password" title="密码">
+    <button id="login" type="button" onclick="connect()">登录</button>
+    <button id="注册" type="button" onclick="registered()">注册</button>
+
+    <br>
     你的名字:<input type="text" id="name" title="你的名字"/><br>
     <button id="connect" type="button" onclick="connect()"> 连接</button>
     <button id="disconnect" type="button" onclick="disconnect">断开连接</button>
